fix: description alignment

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
   color: hsl(0, 0%, 80%);
   font-size: 14px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .links-container {
